test-review/microservices/backend/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: test-be
  name: test-be
