test-review/microservices/backend/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-be
  namespace: test-be
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS'
    nginx.ingress.kubernetes.io/cookie-based-affinity: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod-wso2
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
spec: 
  ingressClassName: nginx
  rules:
  - host: < ADD YOUR HOST HERE >
    http:
      paths:
      - path: < ADD PATH >
        pathType: Prefix
        backend:
          service:
            name: <ADD SERVICE NAME >
            port:
              number: 5000

      
  tls:
    - hosts:
        - test-review-be.host.com
      secretName: test-be-core-tls-secret
